exports[`Test contact reducer handles INITIALIZE_CONTACT action 1`] = `
Object {
  "contact": Object {
    "email": "test@test.com",
    "imgUrl": "http://www.test.image.com",
    "name": "Tester",
    "phoneNumber": "666666666",
  },
  "errors": Object {},
  "isModified": false,
  "loading": false,
}
`;

exports[`Test contact reducer handles LOADING_CONTACT action 1`] = `
Object {
  "contact": Object {
    "email": "",
    "imgUrl": "",
    "name": "",
    "phoneNumber": "",
  },
  "errors": Object {},
  "isModified": false,
  "loading": true,
}
`;

exports[`Test contact reducer handles UPDATE_CONTACT_ATTRIBUTE action 1`] = `
Object {
  "contact": Object {
    "email": "test2@test.com",
    "imgUrl": "http://www.test.image.com",
    "name": "Tester",
    "phoneNumber": "666666666",
  },
  "errors": Object {},
  "isModified": true,
  "loading": false,
}
`;

exports[`Test contact reducer handles UPDATE_CONTACT_ATTRIBUTE action 2`] = `
Object {
  "contact": Object {
    "email": "test@test.com",
    "imgUrl": "http://www.test.image.com/2.png",
    "name": "Tester",
    "phoneNumber": "666666666",
  },
  "errors": Object {},
  "isModified": true,
  "loading": false,
}
`;

exports[`Test contact reducer handles UPDATE_CONTACT_ATTRIBUTE action 3`] = `
Object {
  "contact": Object {
    "email": "test@test.com",
    "imgUrl": "http://www.test.image.com",
    "name": "Tester pro",
    "phoneNumber": "666666666",
  },
  "errors": Object {},
  "isModified": true,
  "loading": false,
}
`;

exports[`Test contact reducer handles UPDATE_CONTACT_ATTRIBUTE action 4`] = `
Object {
  "contact": Object {
    "email": "test@test.com",
    "imgUrl": "http://www.test.image.com",
    "name": "Tester",
    "phoneNumber": "777777777",
  },
  "errors": Object {},
  "isModified": true,
  "loading": false,
}
`;

exports[`Test contact reducer handles VALIDATE_CONTACT success action 1`] = `
Object {
  "contact": Object {
    "email": "",
    "imgUrl": "",
    "name": "",
    "phoneNumber": "",
  },
  "errors": Object {
    "email": "Email is required",
    "name": "Name is required",
  },
  "isModified": false,
  "loading": false,
}
`;

exports[`Test contact reducer handles VALIDATE_CONTACT_ATTRIBUTE email action 1`] = `
Object {
  "contact": Object {
    "email": "",
    "imgUrl": "",
    "name": "",
    "phoneNumber": "",
  },
  "errors": Object {},
  "isModified": false,
  "loading": false,
}
`;

exports[`Test contact reducer handles VALIDATE_CONTACT_ATTRIBUTE email action 2`] = `
Object {
  "contact": Object {
    "email": "",
    "imgUrl": "",
    "name": "",
    "phoneNumber": "",
  },
  "errors": Object {
    "email": "Email is required",
  },
  "isModified": false,
  "loading": false,
}
`;

exports[`Test contact reducer handles VALIDATE_CONTACT_ATTRIBUTE email action 3`] = `
Object {
  "contact": Object {
    "email": "",
    "imgUrl": "",
    "name": "",
    "phoneNumber": "",
  },
  "errors": Object {
    "email": "Email format is incorrect",
  },
  "isModified": false,
  "loading": false,
}
`;

exports[`Test contact reducer handles VALIDATE_CONTACT_ATTRIBUTE imgUrl action 1`] = `
Object {
  "contact": Object {
    "email": "",
    "imgUrl": "",
    "name": "",
    "phoneNumber": "",
  },
  "errors": Object {},
  "isModified": false,
  "loading": false,
}
`;

exports[`Test contact reducer handles VALIDATE_CONTACT_ATTRIBUTE imgUrl action 2`] = `
Object {
  "contact": Object {
    "email": "",
    "imgUrl": "",
    "name": "",
    "phoneNumber": "",
  },
  "errors": Object {
    "imgUrl": "Invalid url",
  },
  "isModified": false,
  "loading": false,
}
`;

exports[`Test contact reducer handles VALIDATE_CONTACT_ATTRIBUTE name action 1`] = `
Object {
  "contact": Object {
    "email": "",
    "imgUrl": "",
    "name": "",
    "phoneNumber": "",
  },
  "errors": Object {},
  "isModified": false,
  "loading": false,
}
`;

exports[`Test contact reducer handles VALIDATE_CONTACT_ATTRIBUTE name action 2`] = `
Object {
  "contact": Object {
    "email": "",
    "imgUrl": "",
    "name": "",
    "phoneNumber": "",
  },
  "errors": Object {
    "name": "Name is required",
  },
  "isModified": false,
  "loading": false,
}
`;

exports[`Test contact reducer returns the initialState state on an undefined state 1`] = `
Object {
  "contact": Object {
    "email": "",
    "imgUrl": "",
    "name": "",
    "phoneNumber": "",
  },
  "errors": Object {},
  "isModified": false,
  "loading": false,
}
`;

exports[`Test contact reducer returns the same state on an unhandled action 1`] = `
Object {
  "contact": Object {
    "email": "",
    "imgUrl": "",
    "name": "",
    "phoneNumber": "",
  },
  "errors": Object {},
  "isModified": false,
  "loading": false,
}
`;
